# playground

./: .gitignore  README.md
cpp20/: Chapter02.ipynb  Chapter03.ipynb  Chapter05.ipynb  Chapter06.ipynb  Chapter07.ipynb
cpp20/jupyter/: Chapter02.ipynb  Chapter06.ipynb  Chapter07.ipynb
cpp20/jupyter/chapter07/: sum.hpp
etc/: debian_setup.sh
etc/cpp_proj_demo/: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  sample.cpp
etc/cpp_proj_demo/cmake/: sanitizers.cmake
etc/cpp_proj_demo/script/: cppcheck_cwe.sh
utils/future/: future_async_promise.cpp
utils/perfetto_example/: CMakeLists.txt  conanfile.txt  main.cpp
utils/spin_lock_benchmark/: ReadMe.md  benchmark.cpp  spin_lock.hpp
utils/type_erasure/: circle.hpp  main.cpp  shape.hpp
utils/virtual_timestamp/: .clang-format  CMakeLists.txt  ReadMe.md
utils/virtual_timestamp/include/virtual_time/: gettimeofday_hijacked.h  util.hpp  virtual_time.hpp
utils/virtual_timestamp/src/: gettimeofday_hijacked.cpp  hijacked.cpp  util.cpp  virtual_time.cpp
utils/virtual_timestamp/test/: get_time_of_day.cpp  system_clock_now.cpp  virtual_time_get.cpp  virtual_time_push.cpp
